test/spec_vectors/data/ok/module_27.wat
(module (memory 1) (data (i32.add (i32.const 0) (i32.const 42))))