test/spec_vectors/data/fail/module_59.wat
(module (memory 1) (data (offset (nop) (i32.const 0))))